--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "redis": "^3.0.2",
+    "fs": "^0.0.1-security"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
